--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-syntex-webhooks",
-  "version": "2.0.1",
+  "version": "4.0.2-b1",
   "description": "A webhook plugin for HTTP devices",
   "main": "index.js",
   "author": "SynTex",
