--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-syntex-webhooks",
-  "version": "2.2.9",
+  "version": "2.2.10-b1",
   "description": "A webhook plugin for HTTP devices",
   "main": "index.js",
   "author": {
