--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 	"dependencies": {
 		"json-fs-store": "^1.0.1",
 		"request": "^2.88.0",
-		"homebridge-syntex-dynamic-platform": "1.0.1-b5"
+		"color-convert": "^1.5.0",
+		"homebridge-syntex-dynamic-platform": "1.0.1-b6"
 	},
 	"keywords": [
 		"syntex",
