--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"json-fs-store": "^1.0.1",
 		"request": "^2.88.0",
 		"color-convert": "^1.5.0",
-		"homebridge-syntex-dynamic-platform": "1.0.3-b6"
+		"homebridge-syntex-dynamic-platform": "^1.0.2"
 	},
 	"keywords": [
 		"syntex",
