--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "homebridge-syntex-webhooks",
-	"version": "2.3.3-b4",
+	"version": "2.3.3",
 	"description": "A webhook plugin for HTTP devices",
 	"main": "index.js",
 	"author": {
