--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
 	},
 	"dependencies": {
 		"json-fs-store": "^1.0.1",
-		"request": "^2.88.0",
+		"axios": "^0.21.1",
 		"color-convert": "^1.5.0",
-		"homebridge-syntex-dynamic-platform": "1.0.6-b9"
+		"homebridge-syntex-dynamic-platform": "1.0.6-b12"
 	},
 	"keywords": [
 		"syntex",
