--- a/config-sample.json
+++ b/config-sample.json
@@ -3,8 +3,7 @@
 		{
 			"platform": "SynTexWebHooks",
 			"port": 1710,
-			"logDirectory": "/var/homebridge/SynTex/log",
-			"automationDirectory": "/var/homebridge/SynTex/automation",
+			"baseDirectory": "/var/homebridge/SynTex",
 			"accessories": [
 				{
 					"id": "sensor1",
