--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"json-fs-store": "^1.0.1",
 		"axios": "^0.21.1",
 		"color-convert": "^1.5.0",
-		"homebridge-syntex-dynamic-platform": "1.0.6-b44"
+		"homebridge-syntex-dynamic-platform": "1.0.6"
 	},
 	"keywords": [
 		"syntex",
