--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
 		"node": ">=9.11.2"
 	},
 	"dependencies": {
-		"json-fs-store": "^1.0.1",
 		"axios": "^0.21.1",
 		"color-convert": "^1.5.0",
-		"homebridge-syntex-dynamic-platform": "1.0.7-b27"
+		"homebridge-syntex-dynamic-platform": "1.0.7-b27",
+		"json-fs-store": "^1.0.1"
 	},
 	"keywords": [
 		"syntex",
@@ -37,5 +37,8 @@
 	"bugs": {
 		"url": "https://github.com/SynTexDZN/homebridge-syntex-webhooks/issues"
 	},
-	"license": "ISC"
+	"license": "ISC",
+	"devDependencies": {
+		"eslint": "^8.7.0"
+	}
 }
