Log Level Updates

--- a/config-sample.json
+++ b/config-sample.json
@@ -5,7 +5,9 @@
 			"baseDirectory": "/var/homebridge/SynTex",
 			"options": {
 				"port": 1710,
-				"language": "us",
+				"language": "us"
+			},
+			"log": {
 				"debug": false
 			},
 			"accessories": [
