--- a/config-sample.json
+++ b/config-sample.json
@@ -14,110 +14,122 @@
 				{
 					"id": "sensor1",
 					"name": "Contact",
-					"services": "contact"
+					"services": [
+						{ "type": "contact" }
+					]
 				},
 				{
 					"id": "EC:FA:BC:59:3F:3C",
 					"name": "Climate",
 					"services": [
-						"temperature",
-						"humidity"
+						{ "type": "temperature" },
+						{ "type": "humidity" }
 					]
 				},
 				{
 					"id": "multi1",
 					"name": "Multi Switch",
 					"services": [
-						{"type": "switch", "name": "First"},
-						{"type": "switch", "name": "Second"}
+						{ "type": "switch", "name": "First" },
+						{ "type": "switch", "name": "Second" }
 					]
 				},
 				{
 					"id": "multi2",
 					"name": "Multi Device",
 					"services": [
-						{"type": "switch", "name": "First"},
-						{"type": "motion", "name": "Second"},
-						{"type": "light", "name": "Third"},
-						{"type": "rain", "name": "Leak"},
-						{"type": "smoke", "name": "Smoke"},
-						{"type": "occupancy", "name": "Present"}
+						{ "type": "switch", "name": "First" },
+						{ "type": "motion", "name": "Second" },
+						{ "type": "light", "name": "Third" },
+						{ "type": "rain", "name": "Leak" },
+						{ "type": "smoke", "name": "Smoke" },
+						{ "type": "occupancy", "name": "Present" }
 					]
 				},
 				{
 					"id": "EC:FA:BC:59:3F:3F",
 					"name": "Switch",
-					"services": {
-						"type": "switch",
-						"requests": [
-							{
-								"trigger": "on",
-								"method": "GET",
-								"url": "http://192.168.178.100/switch?state=true"
-							},
-							{
-								"trigger": "off",
-								"method": "GET",
-								"url": "http://192.168.178.100/switch?state=false"
-							}
-						]
-					}
+					"services": [
+						{
+							"type": "switch",
+							"requests": [
+								{
+									"trigger": "on",
+									"method": "GET",
+									"url": "http://192.168.178.100/switch?state=true"
+								},
+								{
+									"trigger": "off",
+									"method": "GET",
+									"url": "http://192.168.178.100/switch?state=false"
+								}
+							]
+						}
+					]
 				},
 				{
 					"id": "EC:FA:BC:59:3F:30",
 					"name": "Relais",
-					"services": {
-						"type": "relais",
-						"requests": [
-							{
-								"trigger": "on",
-								"method": "GET",
-								"url": "http://192.168.178.101/switch?state=true"
-							},
-							{
-								"trigger": "off",
-								"method": "GET",
-								"url": "http://192.168.178.101/switch?state=false"
-							}
-						]
-					}
+					"services": [
+						{
+							"type": "relais",
+							"requests": [
+								{
+									"trigger": "on",
+									"method": "GET",
+									"url": "http://192.168.178.101/switch?state=true"
+								},
+								{
+									"trigger": "off",
+									"method": "GET",
+									"url": "http://192.168.178.101/switch?state=false"
+								}
+							]
+						}
+					]
 				},
 				{
 					"id": "light1",
 					"name": "Dummy Dimmer",
-					"services": {
-						"type": "dimmer",
-						"requests": [
-							{
-								"trigger": "dimmer",
-								"method": "GET",
-								"url": "http://192.168.178.163/brightness="
-							}
-						]
-					}
+					"services": [
+						{
+							"type": "dimmer",
+							"requests": [
+								{
+									"trigger": "dimmer",
+									"method": "GET",
+									"url": "http://192.168.178.163/brightness="
+								}
+							]
+						}
+					]
 				},
 				{
 					"id": "light2",
 					"name": "Dummy Light",
-					"services": {
-						"type": "rgb",
-						"spectrum":  "RGB",
-						"requests": [
-							{
-								"trigger": "color",
-								"method": "GET",
-								"url": "http://192.168.178.163/color"
-							}
-						]
-					}
+					"services": [
+						{
+							"type": "rgb",
+							"spectrum":  "RGB",
+							"requests": [
+								{
+									"trigger": "color",
+									"method": "GET",
+									"url": "http://192.168.178.163/color"
+								}
+							]
+						}
+					]
 				},
 				{
 					"id": "event1",
 					"name": "Events",
-					"services": {
-						"type": "statelessswitch",
-						"buttons": 1
-					}
+					"services": [
+						{
+							"type": "statelessswitch",
+							"buttons": 1
+						}
+					]
 				}
 			]
 		}
