Final Touches to the README and Example Config

--- a/config-sample.json
+++ b/config-sample.json
@@ -133,7 +133,7 @@
 				},
 				{
 					"id": "blind1",
-					"name": "Blinid",
+					"name": "Blind",
 					"services": [
 						{
 							"type": "blind",
