Added Connection State

--- a/config-sample.json
+++ b/config-sample.json
@@ -65,7 +65,8 @@
 								}
 							]
 						}
-					]
+					],
+					"pingURL": "http://192.168.1.100/ping"
 				},
 				{
 					"id": "EC:FA:BC:59:3F:30",
@@ -86,7 +87,8 @@
 								}
 							]
 						}
-					]
+					],
+					"pingURL": "http://192.168.1.100/ping"
 				},
 				{
 					"id": "light1",
@@ -102,7 +104,8 @@
 								}
 							]
 						}
-					]
+					],
+					"pingURL": "http://192.168.1.100/ping"
 				},
 				{
 					"id": "light2",
@@ -119,7 +122,8 @@
 								}
 							]
 						}
-					]
+					],
+					"pingURL": "http://192.168.1.100/ping"
 				},
 				{
 					"id": "event1",
