--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"dependencies": {
 		"axios": "^0.21.1",
 		"color-convert": "^1.5.0",
-		"homebridge-syntex-dynamic-platform": "1.0.7-b99",
+		"homebridge-syntex-dynamic-platform": "1.0.7",
 		"json-fs-store": "^1.0.1"
 	},
 	"keywords": [
