--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	},
 	"license": "ISC",
 	"devDependencies": {
-		"eslint": "^8.7.0"
+		"eslint": "^8.7.0",
+		"eslint-plugin-react": "^7.31.11"
 	}
 }
